force-app/main/default/objects/Client__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes whether a Client is active with Atlas</description>
    <inlineHelpText>Check the box for active, leave unchecked for inacctive</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>