force-app/main/default/objects/Client__c/fields/Application_Fee_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Application_Fee_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Fee Recieved</label>
    <type>Checkbox</type>
</CustomField>