force-app/main/default/objects/Client__c/fields/Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Atlas receiving initial client application</description>
    <inlineHelpText>Check if application has been received</inlineHelpText>
    <label>Application Received</label>
    <type>Checkbox</type>
</CustomField>