force-app/main/default/objects/Client__c/fields/Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>