force-app/main/default/objects/Client__c/fields/Assessment_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this invoice has been recevied</inlineHelpText>
    <label>Assessment Fee Received</label>
    <type>Checkbox</type>
</CustomField>