force-app/main/default/objects/Client__c/fields/Assessment_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Scheduled__c</fullName>
    <label>Assessment Scheduled</label>
    <type>Date</type>
</CustomField>