force-app/main/default/objects/Client__c/fields/Client_Assigned_to_TF__c.field-meta.xml
<CustomField>
    <fullName>Client_Assigned_to_TF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Assigned to TF</label>
    <type>Checkbox</type>
</CustomField>