force-app/main/default/objects/Client__c/fields/Client_Manual_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Manual_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check once the Client has been sent the Client Manual</inlineHelpText>
    <label>Client Manual Sent</label>
    <type>Checkbox</type>
</CustomField>