force-app/main/default/objects/Client__c/fields/Date_of_Last_PAT__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_PAT__c</fullName>
    <label>Date of Last PAT</label>
    <type>Date</type>
</CustomField>