force-app/main/default/objects/Client__c/fields/Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Fee_Notes__c</fullName>
    <label>Fee Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>