force-app/main/default/objects/Client__c/fields/Info_sent_to_TF_Lead__c.field-meta.xml
<CustomField>
    <fullName>Info_sent_to_TF_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if client interview and contact information has been sent to the client&apos;s team facilitator and lead</inlineHelpText>
    <label>Info sent to TF Lead</label>
    <type>Checkbox</type>
</CustomField>