force-app/main/default/objects/Client__c/fields/Initial_Certification_Agreement_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_Agreement_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Client has signed their certification agreement</inlineHelpText>
    <label>Initial Certification Agreement Received</label>
    <type>Checkbox</type>
</CustomField>