force-app/main/default/objects/Client__c/fields/Initial_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_Date__c</fullName>
    <label>Initial Certification Date</label>
    <type>Date</type>
</CustomField>