force-app/main/default/objects/Client__c/fields/Initial_Certification_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the invoice for the Public Access Test has been received</inlineHelpText>
    <label>Initial Certification Fee Received</label>
    <type>Checkbox</type>
</CustomField>