force-app/main/default/objects/Client__c/fields/Initial_Certification_PAT_Approved__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_PAT_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Certification PAT Approved</label>
    <type>Checkbox</type>
</CustomField>