force-app/main/default/objects/Client__c/fields/Initial_Certification_Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Certification_Survey_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Certification Survey Completed</label>
    <type>Checkbox</type>
</CustomField>