force-app/main/default/objects/Client__c/fields/Initial_PAT_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Initial_PAT_Scheduled__c</fullName>
    <label>Initial PAT Scheduled</label>
    <type>Date</type>
</CustomField>