force-app/main/default/objects/Client__c/fields/Interview_and_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Interview_and_Assessment_Notes__c</fullName>
    <label>Interview and Assessment Notes</label>
    <length>60000</length>
    <type>LongTextArea</type>
</CustomField>