force-app/main/default/objects/Client__c/fields/Lead_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This individual serves as the Lead for this client</description>
    <label>Lead (Facilitator)</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipLabel>Clients (Lead (Facilitator))</relationshipLabel>
    <relationshipName>Clients1</relationshipName>
    <type>Lookup</type>
</CustomField>