force-app/main/default/objects/Client__c/fields/LOMI_Recieved__c.field-meta.xml
<CustomField>
    <fullName>LOMI_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Letter of Medical Benefits</description>
    <inlineHelpText>Check if Atlas has this letter</inlineHelpText>
    <label>LOMI Recieved</label>
    <type>Checkbox</type>
</CustomField>