force-app/main/default/objects/Client__c/fields/Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Service__c</fullName>
    <label>Military Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>