force-app/main/default/objects/Client__c/fields/Recertification_ID_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Recertification_ID_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recertification ID Ordered</label>
    <type>Checkbox</type>
</CustomField>