force-app/main/default/objects/Client__c/fields/Recertification_PAT_Approved__c.field-meta.xml
<CustomField>
    <fullName>Recertification_PAT_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the Client has completed the Public Access Test</inlineHelpText>
    <label>Recertification PAT Approved</label>
    <type>Checkbox</type>
</CustomField>