force-app/main/default/objects/Client__c/fields/Recertification_PAT_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Recertification_PAT_Scheduled__c</fullName>
    <label>Recertification PAT Scheduled</label>
    <type>Date</type>
</CustomField>