force-app/main/default/objects/Client__c/fields/Recertification_Type__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Type__c</fullName>
    <label>Recertification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Live Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>