force-app/main/default/objects/Client__c/fields/Required_Services__c.field-meta.xml
<CustomField>
    <fullName>Required_Services__c</fullName>
    <description>This field details exactly what the client is needing regarding tasks and services</description>
    <label>Required Services</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>