force-app/main/default/objects/Client__c/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <label>Secondary Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergen</fullName>
            </value>
            <value>
                <fullName>Autism</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Hearing</fullName>
            </value>
            <value>
                <fullName>Medical Alert</fullName>
            </value>
            <value>
                <fullName>Medical Assistance</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Psychiatric</fullName>
            </value>
            <value>
                <fullName>Seizure Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>