force-app/main/default/objects/Client__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Describes that stage this client is in regarding services with Atlas</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake</label>
            </value>
            <value>
                <fullName>On-boarding</fullName>
            </value>
            <value>
                <fullName>On-going</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>