force-app/main/default/objects/Client__c/fields/Team_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Team_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connects the client record to the team facilitator that is working with the client and trainer</description>
    <label>Team Facilitator</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>