force-app/main/default/objects/Client__c/fields/Training_Completed__c.field-meta.xml
<CustomField>
    <fullName>Training_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Completed</label>
    <type>Checkbox</type>
</CustomField>