force-app/main/default/objects/Client__c/fields/Training_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Training_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the invoice for the training has been received by Atlas</inlineHelpText>
    <label>Training Fee Received</label>
    <type>Checkbox</type>
</CustomField>