force-app/main/default/objects/Client__c/fields/Training_Plan_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Training Plan Drafted</label>
    <type>Checkbox</type>
</CustomField>