force-app/main/default/objects/Client__c/fields/Vest_and_ID_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Vest_and_ID_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vest and ID Ordered</label>
    <type>Checkbox</type>
</CustomField>