force-app/main/default/objects/Client__c/fields/Vet_Health_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Vet_Health_Form_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if this document has been received</inlineHelpText>
    <label>Vet Health Form Received</label>
    <type>Checkbox</type>
</CustomField>