force-app/main/default/objects/Client__c/recordTypes/Client_on_going.recordType-meta.xml
<RecordType>
    <fullName>Client_on_going</fullName>
    <active>true</active>
    <description>The status of all current Atlas clients</description>
    <label>Client - On-Going</label>
</RecordType>