force-app/main/default/objects/Client__c/recordTypes/Client_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Client_Onboarding</fullName>
    <active>true</active>
    <description>The phase between intake and full Atlas client</description>
    <label>Client - On-boarding</label>
</RecordType>