force-app/main/default/objects/Client__c/recordTypes/Intake.recordType-meta.xml
<RecordType>
    <fullName>Intake</fullName>
    <active>true</active>
    <description>The first stage of an Atlas Client</description>
    <label>Client - Intake</label>
</RecordType>